# ipcalc-gui

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  release.yml
scripts/: package-windows.ps1
src/: ipcalc.rs  main.rs
ui/: app.slint
