[package]
name = "ipcalc"
version = "0.2.0"
description = "Native Slint IPv4 and IPv6 calculator"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["ipcalc", "subnet", "ipv4", "ipv6", "slint"]
categories = ["gui", "network-programming"]
build = "build.rs"

[dependencies]
slint = { version = "1.16.1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-software",
    "compat-1-2",
] }

[build-dependencies]
slint-build = "1.16.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
